--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <resources>
-            <Atlas name="myAtlas" type="BILINEAR">
-                <texture name="ship.png" />
+            <Atlas type="BILINEAR" width="1024" height="512">
+                <texture path="ship.png" name="ship" />
             </Atlas>
 </resources>
