--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <resources>
             <Atlas type="BILINEAR" width="1024" height="512">
+                <texture path="button_menu.png" name="button_menu" />
                 <texture path="ship.png" name="ship" />
             </Atlas>
 </resources>
