--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -3,7 +3,6 @@
             <Atlas type="BILINEAR" width="2048" height="2048">
                 <texture path="button_menu.png" name="button_menu" />
                 <texture path="ship.png" name="ship" />
-                <texture path="bgShip.png" name="bg_ship"/>
-                <texture path="back.png" name="back"/>
+                <texture path="menuBackground.png" name="bg_ship"/>
             </Atlas>
 </resources>
