--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <resources>
             <Atlas type="BILINEAR" width="2048" height="2048">
-                <texture path="button_menu.png" name="button_menu" />
+                <texture path="menuButton.png" name="menuButton" />
                 <texture path="ship.png" name="ship" />
-                <texture path="menuBackground.png" name="bg_ship"/>
+                <texture path="menuBackground.png" name="menuBackground"/>
             </Atlas>
 </resources>
