--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -5,4 +5,7 @@
                 <texture path="ship.png" name="ship" />
                 <texture path="menuBackground.png" name="menuBackground"/>
             </Atlas>
+            <Atlas type="BILINEAR" width="2048" height="2048" format="RGBA_8888">
+                <texture path="gameBackground.png" name="gameBackground"/>
+            </Atlas>
 </resources>
