--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -8,5 +8,6 @@
             <Atlas type="BILINEAR" width="2048" height="2048" format="RGBA_8888">
                 <texture path="gameBackground.png" name="gameBackground"/>
                 <texture path="wave.png" name="wave"/>
+                <texture path="periscope.png" name="periscope"/>
             </Atlas>
 </resources>
