Переделал загрузку текстур гейм сцены через drowable Добавил отключение touchArea рут сцены при переходе на другую сцену

--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -6,7 +6,7 @@
                 <texture name="menubackground"/>
             </Atlas>
             <Atlas type="BILINEAR" width="2048" height="2048" format="RGBA_8888">
-                <texture path="gameBackground.png" name="gameBackground"/>
-                <texture path="wave.png" name="wave"/>
+                <texture name="gamebackground"/>
+                <texture name="wave"/>
             </Atlas>
 </resources>
