--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -7,6 +7,7 @@
             </Atlas>
             <Atlas type="BILINEAR" width="2048" height="2048" format="RGBA_8888">
                 <texture name="gamebackground"/>
+                <texture name="pausebutton"/>
                 <texture name="wave"/>
             </Atlas>
 </resources>
