--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -7,7 +7,9 @@
             </Atlas>
             <Atlas type="BILINEAR" width="2048" height="2048" format="RGBA_8888">
                 <texture name="gamebackground"/>
-                <texture name="pausebutton"/>
                 <texture name="wave"/>
+                <texture name="pausebutton"/>
+                <texture name="playbutton"/>
+                <texture name="backbutton"/>
             </Atlas>
 </resources>
