Сделал две кнопки управления

--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -11,7 +11,8 @@
                 <texture name="pausebutton"/>
                 <texture name="playbutton"/>
                 <texture name="backbutton"/>
-                <texture name="movebutton"/>
+                <texture name="leftbutton"/>
+                <texture name="rightbutton"/>
                 <texture name="firebutton"/>
             </Atlas>
 </resources>
