--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -14,5 +14,6 @@
                 <texture name="leftbutton"/>
                 <texture name="rightbutton"/>
                 <texture name="firebutton"/>
+                <texture name="sailfish"/>
             </Atlas>
 </resources>
