Добавлена ХП на GameHUD, добавлены текстуры здорровья, когда оно есть и когда нет

--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -19,5 +19,7 @@
                 <texture name="sailfish"/>
                 <texture name="missileboat"/>
                 <texture name="battleship"/>
-            </Atlas>
+                <texture name="onhealth"/>
+                <texture name="offhealth"/>
+           </Atlas>
 </resources>
