Добавлены очки в GameHUD

--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -21,5 +21,6 @@
                 <texture name="battleship"/>
                 <texture name="onhealth"/>
                 <texture name="offhealth"/>
+                <texture name="gameoverbackground"/>
            </Atlas>
 </resources>
