--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -21,7 +21,8 @@
                 <texture name="battleship"/>
                 <texture name="hitarea"/>
             </Atlas>
+            <Atlas>
                 <texture name="onhealth"/>
                 <texture name="offhealth"/>
-           </Atlas>
+            </Atlas>
 </resources>
