переделал gun добавил перспективу

--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -16,6 +16,7 @@
                 <texture name="firebutton"/>
                 <texture name="torpedo"/>
                 <texture name="gun" />
+                <texture name="gunmask"/>
                 <texture name="sailfish"/>
                 <texture name="missileboat"/>
                 <texture name="battleship"/>
