Progress Bar beta

--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -25,5 +25,7 @@
                 <texture name="onhealth"/>
                 <texture name="offhealth"/>
                 <texture name="gameoverbackground"/>
+                <texture name="ontorpedoindicator"/>
+                <texture name="offtorpedoindicator"/>
            </Atlas>
 </resources>
