Подгонка координат, необходим рефакторинг

--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -23,5 +23,6 @@
                 <texture name="hitarea"/>
                 <texture name="onhealth"/>
                 <texture name="offhealth"/>
+                <texture name="ships_left"/>
            </Atlas>
 </resources>
