--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -22,6 +22,6 @@
                 <texture name="onscreen_control_knob"/>
                 <texture name="hitarea"/>
                 <texture name="onhealth"/>
-                <texture name="offhealth"/>
+                <texture name="cloud"/>
            </Atlas>
 </resources>
