--- a/res/xml/levels.xml
+++ b/res/xml/levels.xml
@@ -2,15 +2,15 @@
 
 <resources>
     <level id="1" type="regular">
-        <enemie number="3" velocity="20" constSpawnDelay="5.0" firstSpawnIn="1.0" health="100" points="200" lines="1 2 3" direction="to left">missileboat.png</enemie>
+        <enemy number="3" velocity="20" constSpawnDelay="5.0" firstSpawnIn="1.0" health="100" points="200" lines="1 2 3" direction="to left">missileboat.png</enemy>
     </level>
     <level id="2" type="regular">
-        <enemie number="3" velocity="30" constSpawnDelay="10.0" firstSpawnIn="3.0" health="200" points="200" lines="1 2 3" direction="to left">sailfish.png</enemie>
-        <enemie number="6" velocity="20" constSpawnDelay="5.0" firstSpawnIn="1.0" health="100" points="200" lines="1 2 3" direction="to right">missileboat.png</enemie>
+        <enemy number="3" velocity="30" constSpawnDelay="10.0" firstSpawnIn="3.0" health="200" points="200" lines="1 2 3" direction="to left">sailfish.png</enemy>
+        <enemy number="6" velocity="20" constSpawnDelay="5.0" firstSpawnIn="1.0" health="100" points="200" lines="1 2 3" direction="to right">missileboat.png</enemy>
     </level>
     <level id="3" type="regular">
-        <enemie number="3"  velocity="40" constSpawnDelay="15.0" firstSpawnIn="5.0" health="300" points="200" lines=" 3" direction="to left">battleship.png</enemie>
-        <enemie number="6" velocity="30" constSpawnDelay="10.0" firstSpawnIn="3.0" health="200" points="200" lines="1 2 3" direction="to left">sailfish.png</enemie>
-        <enemie number="12" velocity="20" constSpawnDelay="5.0" firstSpawnIn="1.0" health="100" points="200" lines="1 2 3" direction="to left">missileboat.png</enemie>
+        <enemy number="3"  velocity="40" constSpawnDelay="15.0" firstSpawnIn="5.0" health="300" points="200" lines=" 3" direction="to left">battleship.png</enemy>
+        <enemy number="6" velocity="30" constSpawnDelay="10.0" firstSpawnIn="3.0" health="200" points="200" lines="1 2 3" direction="to left">sailfish.png</enemy>
+        <enemy number="12" velocity="20" constSpawnDelay="5.0" firstSpawnIn="1.0" health="100" points="200" lines="1 2 3" direction="to left">missileboat.png</enemy>
     </level>
 </resources>
