--- a/res/xml/levels.xml
+++ b/res/xml/levels.xml
@@ -3,25 +3,25 @@
 <resources>
     <level id="1" type="regular" scoreMultiplier="1.0">
         <enemy type="sailfish"
-               number="3"
-               periodicSpawnDelay="5.0"
+               number="6"
+               periodicSpawnDelay="1.0"
                firstSpawnIn="1.0"
                lines="1"
                direction="to right"/>
-        <enemy type="missileBoat"
-               number="3"
-               periodicSpawnDelay="5.0"
-               firstSpawnIn="10.0"
-               lines="2"
-               direction="to right"/>
-        <enemy type="battleship"
-               number="2" randomSpawnDelay="20.0"
-               firstSpawnIn="10.0"
-               lines="3"
-               direction="to right"/>
+        <!--<enemy type="missileBoat"-->
+               <!--number="3"-->
+               <!--periodicSpawnDelay="5.0"-->
+               <!--firstSpawnIn="10.0"-->
+               <!--lines="2"-->
+               <!--direction="to right"/>-->
+        <!--<enemy type="battleship"-->
+               <!--number="2" randomSpawnDelay="20.0"-->
+               <!--firstSpawnIn="10.0"-->
+               <!--lines="3"-->
+               <!--direction="to right"/>-->
     </level>
 
-    <level id="2" type="regular" scoreMultiplier="1.5">
+    <level id="3" type="regular" scoreMultiplier="1.5">
         <enemy type="sailfish"
                number="3"
                periodicSpawnDelay="10.0"
