описание levels.xml

--- a/res/xml/levels.xml
+++ b/res/xml/levels.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+Тэг левел описывает уровень, id - номер уровня, если запрашиваемого уровня нет, то игра окончена,
+type пока ниыего не меняет
+
+Тэг enemy описывает корабли уровня, type - название корабля, number - число кораблей,
+firstSpawnIn - секунда на которой первый раз появляется корабль,
+periodicSpawnDelay - следующий корабль спавнится через этот промежуток
+randomSpawnDelay - следующий корабль в случайный момент в диапозоне до указанного значения
+lines - линии на которых могут спавниться корабли
+direction - направление: на лево, на право, случайно
+
+-->
+
 <resources>
     <level id="1" type="regular" scoreMultiplier="1.0">
         <enemy type="sailfish" number="1" firstSpawnIn="4.0" lines="1" direction="to right"/>
