--- a/res/xml/atlas.xml
+++ b/res/xml/atlas.xml
@@ -24,5 +24,6 @@
                 <texture name="onhealth"/>
                 <texture name="cloud"/>
                 <texture name="score"/>
+                <texture name="ships_left"/>
            </Atlas>
 </resources>
