--- a/res/values/integer.xml
+++ b/res/values/integer.xml
@@ -22,5 +22,6 @@
     <integer name="BATTLESHIP_HITAREA_END_PIXEL">193</integer>
     <integer name="BATTLESHIP_SCORE_POINTS">20</integer>
     <!-- Music Volumes in percent -->
-    <integer name="GAME_SCENE_MUSIC_VOLUME">1</integer>
+    <integer name="GAME_SCENE_MUSIC_VOLUME">30</integer>
+    <integer name="GAME_SCENE_WAVES_VOLUME">30</integer>
 </resources>
