--- a/res/values/integer.xml
+++ b/res/values/integer.xml
@@ -24,4 +24,6 @@
     <!-- Music Volumes in percent -->
     <integer name="GAME_SCENE_MUSIC_VOLUME">30</integer>
     <integer name="GAME_SCENE_WAVES_VOLUME">30</integer>
+    <integer name="GUN_FIRE_VOLUME">70</integer>
+    <integer name="SHIP_EXPLOSION">50</integer>
 </resources>
