--- a/res/values/integer.xml
+++ b/res/values/integer.xml
@@ -26,4 +26,5 @@
     <integer name="GAME_SCENE_WAVES_VOLUME">30</integer>
     <integer name="GUN_FIRE_VOLUME">70</integer>
     <integer name="SHIP_EXPLOSION">50</integer>
+    <integer name="NEW_LEVEL_GONG_VOLUME">90</integer>
 </resources>
