--- a/res/xml/levels.xml
+++ b/res/xml/levels.xml
@@ -15,9 +15,9 @@ direction - направление: на лево, на право, случай
 
 <resources>
     <level id="1" type="regular" scoreMultiplier="1.0">
-        <enemy type="sailfish" number="1" firstSpawnIn="4.0" lines="1" direction="to right"/>
-        <enemy type="sailfish" number="2" firstSpawnIn="1.0" periodicSpawnDelay="8.0" lines="2" direction="to right"/>
-        <enemy type="sailfish" number="1" firstSpawnIn="4.0" lines="3" direction="to right"/>
+        <enemy type="battleship" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="1" direction="to right"/>
+        <enemy type="missileBoat" number="2" firstSpawnIn="1.0" periodicSpawnDelay="8.0" lines="2" direction="to right"/>
+        <enemy type="sailfish" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="3" direction="to right"/>
     </level>
 
     <level id="2" type="regular" scoreMultiplier="1.5">
