--- a/res/xml/levels.xml
+++ b/res/xml/levels.xml
@@ -38,28 +38,28 @@ direction - направление: на лево, на право, случай
         <enemy type="sailfish" number="4" firstSpawnIn="2.0" periodicSpawnDelay="6.0" lines="3" direction="both"/>
     </level>
 
-    <level id="5" type="regular" scoreMultiplier="1.0">
-        <enemy type="battleship" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="1" direction="to right"/>
-        <enemy type="missileBoat" number="2" firstSpawnIn="1.0" periodicSpawnDelay="8.0" lines="2" direction="to right"/>
-        <enemy type="sailfish" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="3" direction="to right"/>
+    <level id="5" type="regular" scoreMultiplier="1.1">
+        <enemy type="sailfish" number="5" firstSpawnIn="10.0" periodicSpawnDelay="8.0" lines="1 2" direction="to right"/>
+        <enemy type="missileBoat" number="3" firstSpawnIn="15.0" periodicSpawnDelay="8.0" lines="1 2 3" direction="to left"/>
+        <enemy type="sailfish" number="5" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="2 3" direction="to right"/>
     </level>
 
-    <level id="6" type="regular" scoreMultiplier="1.0">
-        <enemy type="battleship" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="1" direction="to right"/>
-        <enemy type="missileBoat" number="2" firstSpawnIn="1.0" periodicSpawnDelay="8.0" lines="2" direction="to right"/>
-        <enemy type="sailfish" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="3" direction="to right"/>
+    <level id="6" type="regular" scoreMultiplier="1.2">
+        <enemy type="sailfish" number="6" firstSpawnIn="4.0" periodicSpawnDelay="10.0" lines="1 3" direction="to left"/>
+        <enemy type="missileBoat" number="5" firstSpawnIn="15.0" periodicSpawnDelay="10.0" lines="2" direction="to left"/>
+        <enemy type="sailfish" number="6" firstSpawnIn="4.0" periodicSpawnDelay="10.0" lines="2 3" direction="to left"/>
     </level>
 
-    <level id="7" type="regular" scoreMultiplier="1.0">
-        <enemy type="battleship" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="1" direction="to right"/>
-        <enemy type="missileBoat" number="2" firstSpawnIn="1.0" periodicSpawnDelay="8.0" lines="2" direction="to right"/>
-        <enemy type="sailfish" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="3" direction="to right"/>
+    <level id="7" type="regular" scoreMultiplier="1.2">
+        <enemy type="sailfish" number="7" firstSpawnIn="4.0" periodicSpawnDelay="10.0" lines="1 2" direction="to right"/>
+        <enemy type="missileBoat" number="6" firstSpawnIn="15.0" periodicSpawnDelay="10.0" lines="1 2" direction="to right"/>
+        <enemy type="sailfish" number="7" firstSpawnIn="4.0" periodicSpawnDelay="10.0" lines="2 3" direction="to right"/>
     </level>
 
-    <level id="8" type="regular" scoreMultiplier="1.0">
-        <enemy type="battleship" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="1" direction="to right"/>
-        <enemy type="missileBoat" number="2" firstSpawnIn="1.0" periodicSpawnDelay="8.0" lines="2" direction="to right"/>
-        <enemy type="sailfish" number="2" firstSpawnIn="4.0" periodicSpawnDelay="8.0" lines="3" direction="to right"/>
+    <level id="8" type="regular" scoreMultiplier="1.2">
+        <enemy type="sailfish" number="7" firstSpawnIn="4.0" periodicSpawnDelay="10.0" lines="1 2" direction="both"/>
+        <enemy type="missileBoat" number="6" firstSpawnIn="15.0" periodicSpawnDelay="10.0" lines="1 2" direction="both"/>
+        <enemy type="sailfish" number="7" firstSpawnIn="4.0" periodicSpawnDelay="10.0" lines="2 3" direction="both"/>
     </level>
 
     <level id="9" type="regular" scoreMultiplier="1.0">
